<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_background"
    android:paddingLeft="@dimen/_24sdp"
    android:paddingTop="@dimen/_24sdp"
    android:paddingRight="@dimen/_24sdp"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/grad_background">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/text_register"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp" />

        <LinearLayout
            android:id="@+id/layout_section1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_register"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_name"
                    style="@style/TextInputEditText"
                    android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/email">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_email"
                    style="@style/TextInputEditText"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_password"
                    style="@style/TextInputEditText"
                    android:drawableStart="@drawable/ic_password_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_password_outline_black_24dp"

                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_confirm_password"
                    style="@style/TextInputEditText"
                    android:drawableStart="@drawable/ic_password_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_password_outline_black_24dp"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:layout_below="@+id/layout_section1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/view_background"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="@dimen/_70sdp"
            android:paddingRight="@dimen/_70sdp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <LinearLayout
            android:id="@+id/layout_sign_up_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btn_register"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center">

            <TextView
                android:id="@+id/text_sign_up_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_an_account_login"
                android:textColor="#d9e5f3" />

            <ImageView
                android:id="@+id/image_sign_up_sign_up"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:src="@drawable/question" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>