<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_background"
    android:paddingLeft="@dimen/_24sdp"
    android:paddingTop="@dimen/_24sdp"
    android:paddingRight="@dimen/_24sdp"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/grad_background">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp" />

        <LinearLayout
            android:id="@+id/layout_section1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_login"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/email">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_login_email"
                    style="@style/TextInputEditText"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_login_password"
                    style="@style/TextInputEditText"
                    android:drawableStart="@drawable/ic_password_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_password_outline_black_24dp"

                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/Button"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_section2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_section1"
            android:layout_marginTop="15dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/button_google_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/buttonFacebookLogin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/_12sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_section2"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/colorPrimaryDark" />


        <LinearLayout
            android:id="@+id/layout_login_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/text_or"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <TextView
                android:id="@+id/text_login_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dont_have_an_account"
                android:textColor="#d9e5f3" />

            <ImageView
                android:id="@+id/image_login_register"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:src="@drawable/question" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>